--- a/assets/scss/_pricing.scss
+++ b/assets/scss/_pricing.scss
@@ -20,7 +20,7 @@
   position: relative;
 
   &.active {
-    background: linear-gradient(180deg, #3056d3 0%, #179bee 100%);
+    background: linear-gradient(180deg, #FFCB46 0%, #179bee 100%);
     border: none;
     padding: 55px 30px;
 
