--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -7,7 +7,7 @@
   --font: "Inter", sans-serif;
   --body-color: #637381;
   --heading-color: #212b36;
-  --primary-color: #3056d3;
+  --primary-color: #FFCB46;
   --white: #ffffff;
 }
 
